css/responsive.css
@media screen and (max-width:700px) {
    *{
        /* overflow-x: hidden; */
    }


    nav a{
        font-size: 1.2rem;
    }

    .about-container{
        flex-direction: column;
    }

    .about-container>img{
        width: 80dvw;
    }

    .intro-container{
        width: 90dvw;
    }

    #skills, #projects{
        height: auto;
    }

    .skills-container{
        grid-template-columns: 1fr;
    }

    .skills-card>i{
        font: 2rem;
    }

    .heading{
        font: 1.5rem;
        margin: 0;
    }

    #about, #projects, #skills, footer{
        padding: 110px 20px 20px 20px;
    }

    .project-container{
        grid-template-columns: 1fr;
    }

    footer{
        padding: 15px;
    }

    .contact-container{
        flex-direction: column;
        gap: 30px;
    }

}

@media screen and (min-width:700px) and (max-width:1150px){

    #skills, #projects{
        height: auto;
    }

    .skills-container, .project-container{
        grid-template-columns: repeat(2, 1fr);
    }
}

